fix icon flex on mobile add button styles

--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,10 @@
   --grid-maxWidth: 140rem;
   --font-size: 1.8rem;
 
-  color-scheme: dark
+  /*color-scheme: dark*/
 }
+
+
 
 
 /* Objects
@@ -102,15 +104,22 @@ h3 {
 
 hr {
   height: 2px;
+  border-radius: 2px;
+  margin: 3rem 0rem;
+}
+
+.nowrap {
+flex: 1 1 auto;
 }
 
 .button {
   position: relative;
   top: -20px;
+  background: var(--color-lightGrey);
   text-transform: uppercase;
   letter-spacing: .2rem;
   font-size: 1.6rem;
-  transition: .2s ease-in-out;
+  opacity: 1;
 }
 
 .card {
@@ -146,10 +155,7 @@ hr {
 /* Hover Effects
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-.button:hover {
-  background: var(--color-green);
-  opacity: 1;
-}
+
 
 
 .card:hover {
@@ -159,8 +165,16 @@ hr {
 /*div.col a:hover img {
   opacity: 10%;
   filter: saturate(0);
-}*/
+}
 
+
+.button:hover {
+  background: var(--color-green);
+  opacity: 1;
+}
+
+
+*/
 
 
 
@@ -174,13 +188,16 @@ hr {
 /* Animation
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-.anigrad {
-    background: linear-gradient(1deg, #B0D169, #7AB3C5);
+
+.anigrad, .button:hover {
+    background: linear-gradient(0deg, #B0D169, #7AB3C5);
     background-size: 400% 400%;
     -webkit-animation: AnimationName 8s ease infinite;
     -moz-animation: AnimationName 8s ease infinite;
     -o-animation: AnimationName 8s ease infinite;
     animation: AnimationName 8s ease infinite;
+    opacity: 1;
+    transition: .4s ease-in-out;
 }
 @-webkit-keyframes AnimationName {
     0%{background-position:51% 0%}
